<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large">

    <TextView
        android:id="@+id/dialog_apod_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reorder_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_apod_text_reorder_by_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/reorder_by_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_apod_text_title" />

    <CheckBox
        android:id="@+id/dialog_apod_checkbox_reorder_by_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_apod_text_reorder_by_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_apod_text_reorder_by_title" />

    <TextView
        android:id="@+id/dialog_apod_text_reorder_by_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/reorder_by_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_apod_text_reorder_by_title" />

    <CheckBox
        android:id="@+id/dialog_apod_checkbox_reorder_by_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_apod_text_reorder_by_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_apod_text_reorder_by_date" />

    <Button
        android:id="@+id/dialog_apod_button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/design_default_color_primary"
        android:text="@string/apply"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintTop_toBottomOf="@+id/dialog_apod_text_reorder_by_date" />

    <Button
        android:id="@+id/dialog_apod_button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/design_default_color_secondary"
        android:text="@string/cancel"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintTop_toBottomOf="@+id/dialog_apod_button_apply" />

</androidx.constraintlayout.widget.ConstraintLayout>